--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     width: 100vw;
+    height: 100vh;
     flex-direction: column;
 }
 
@@ -14,7 +15,7 @@ body {
     display: flex;
 }
 
-.nav {
+#nav {
     justify-content: space-around;
     align-items: center;
     height: 40px;
@@ -22,7 +23,7 @@ body {
     margin-bottom: 50px;
 }
 
-.nav > ul {
+#nav > ul {
     width: 80%;
     justify-content: space-around;
 }
@@ -34,7 +35,14 @@ body {
 }
 
 .ministries {
-    width: 60%;
+    width: 80%;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.icons {
+    height: 20px;
 }
 
 #cardcontainer {
@@ -46,4 +54,7 @@ body {
 
 .choices {
     flex-direction: row;
+    cursor: pointer;merci 
+
 }
+
