--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Share Tech Mono', monospace;
     list-style: none;
     margin: 0;
 }
@@ -11,6 +11,9 @@ body {
     flex-direction: column;
     align-items: stretch;
     justify-content: space-between;
+    background-image: url('../ressources/background.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
@@ -21,11 +24,14 @@ body {
     justify-content: space-around;
     align-items: center;
     height: 40px;
-    border: solid 1px;
+    border-bottom: solid 5px;
+    padding: 30px 10px;
+    color: aliceblue;
+    background-color: #67AAF9;
 }
 
 #nav > ul {
-    width: 80%;
+    width: 50%;
     justify-content: space-between;
 }
 
@@ -34,37 +40,53 @@ body {
 }
 
 .main {
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 95%;
-    min-height: 90%;
+    min-height: 93%;
+    padding: 10px;
 }
 
 #ministries {
-    width: 60%;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    margin: 100px 0;
+    width: 100%;
 }
 
 #ministries > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
     max-width: 200px;
-    min-height: 150px;
+    min-height: 300px;
+    background-color: #FFF;
+    border-radius: 2%;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
 }
 
 .icons {
-    height: 20px;
+    width: 90%;
+}
+
+.logo {
+    width: 100%;
 }
 
 #cardcontainer {
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
     font-size: 1.5rem;
-    max-width: 300px;
+    padding: 20px;
+    background-color: #67AAF9;
+    border-radius: 2%;
+    max-width: 400px;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
 }
 
 #cardcontainer > .card {
@@ -76,10 +98,25 @@ body {
 .no {
     height: 50px;
     line-height: 50px;
+    width: 100%;
+    background-color: #67AAF9;
+    margin-bottom: 10px;
 }
 
+.gobtn,
 .choices {
+    width: 100%;
     flex-direction: row;
     cursor: pointer;
+    display: block;
 }
 
+aside {
+    position: absolute;
+    top: 20%;
+    left: 65%;
+    padding: 10px;
+    font-size: 2rem;
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
+}
