--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,13 @@ aside {
     background-color: rgba(255, 255, 255, 0.4);
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
 }
+
+#musicIcon {
+    position: absolute;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
+    cursor: pointer;
+}
+
+#musicIcon > img {
+    width: 56px;
+}
