--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 }
 
 body {
-    
     height: 100vh;
     flex-direction: column;
     align-items: stretch;
@@ -62,14 +61,15 @@ body {
     align-items: center;
     padding: 20px;
     max-width: 190px;
-    min-height: 300px;
+    min-height: 200px;
     background-color: #FFF;
     border-radius: 2%;
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
 }
 
 .icons {
-    width: 90%;
+    max-height: 100px;
+    width: 80%;
 }
 
 .logo {
@@ -249,10 +249,80 @@ aside {
   width: 0;
 }
 
-/* MEDIA PHONE AND TABLETTE VIEW */
+/* MEDIA TABLETTE VIEW */
+@media (max-width: 1100px) { 
+  * {
+    box-sizing: border-box;
+    font-family: 'Share Tech Mono', monospace;
+    list-style: none;
+    margin: 0;
+    font-size: 15px;
+  }
 
-/*     
+  #ministries {
+    width: 70%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     grid-gap: 10px;
-*/
+  }
+
+  #cardcontainer {
+    max-height: 300px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 20px;
+    background-color: #67AAF9;
+    border-radius: 2%;
+    max-width: 400px;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
+  }
+
+  aside {
+    position: absolute;
+    top: 20%;
+    left: 75%;
+    font-size: 2rem;
+  }
+}
+
+/* MEDIA PHONE VIEW */
+@media (max-width: 1100px) { 
+  * {
+    box-sizing: border-box;
+    font-family: 'Share Tech Mono', monospace;
+    list-style: none;
+    margin: 0;
+    font-size: 15px;
+  }
+
+  #ministries {
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+    grid-gap: 10px;
+  }
+
+  #cardcontainer {
+    max-height: 300px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 20px;
+    background-color: #67AAF9;
+    border-radius: 2%;
+    max-width: 400px;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
+  }
+
+  aside {
+    position: absolute;
+    top: 20%;
+    left: 75%;
+    font-size: 2rem;
+  }
+}
