--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 #ministries > div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     padding: 20px;
     max-width: 190px;
@@ -76,6 +76,26 @@ body {
     width: 100%;
 }
 
+.final-div {
+  margin: auto 0;
+  position: fixed;
+  top: 155px;
+  right: 0;
+  left: 0;
+}
+
+.final-div img {
+  max-width: 100vw;
+}
+
+.reset-btn {
+  cursor: pointer;
+}
+
+.grey {
+  background-color: grey;
+}
+
 #cardcontainer {
     flex-direction: column;
     justify-content: space-evenly;
@@ -85,7 +105,7 @@ body {
     padding: 20px;
     background-color: #67AAF9;
     border-radius: 2%;
-    max-width: 400px;
+    width: 350px;
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
 }
 
@@ -123,6 +143,12 @@ aside {
     padding: 5px;
     background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.65);
+}
+
+.final-div {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 #musicIcon {
@@ -302,6 +328,7 @@ aside {
   .main {
     flex-direction: column-reverse;
     align-items: center;
+    margin: 0 auto;
   }
 
   #ministries {
@@ -339,7 +366,12 @@ aside {
   }
 
   aside {
-    top: 80%;
-    left: 75%;
+    top: 52%;
+    left: 40%;
+  }
+
+  .gobtn {
+    background-color: #FFF;
+    padding: 30px;
   }
 }
